--- a/assets/style.css
+++ b/assets/style.css
@@ -6,3 +6,12 @@
     left: 0;
     z-index: -1;
 }
+
+.customTooltip * {
+    color: #4a4a4a;
+    font-size: 18px
+}
+   
+.customTooltip .introjs-tooltip-title {
+    color: #0a41c9;
+}
